# claudio

./: .env.example  .gitignore  .n8n-config.example.json  CLAUDE.md  Cargo.toml  README.en.md  README.md  config.example.toml  docker-compose.yaml
.github/workflows/: ci.yml
claudio-api/: Cargo.toml
claudio-api/src/: config.rs  main.rs
claudio-api/src/analytics/: mod.rs  queries.rs  query_builder.rs  types.rs
claudio-api/src/api/: classify.rs  error.rs  mod.rs  rate_limit.rs  routes.rs  types.rs
claudio-api/src/api/handlers/: agents.rs  chat.rs  executions.rs  mod.rs  projects.rs  stats.rs  users.rs  utils.rs
claudio-api/src/claude/: executor.rs  mod.rs
claudio-api/src/plugins/: mod.rs
claudio-api/src/plugins/semantic/: mod.rs
claudio-api/src/plugins/slack/: bridge.rs  mod.rs
claudio-api/src/storage/: core.rs  executions.rs  feedback.rs  mod.rs  projects.rs  reactions.rs  types.rs  users.rs
claudio-api/src/utils/: mod.rs  mrkdwn.rs
dashboard/: next.config.ts  package.json  pnpm-lock.yaml
dashboard/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
dashboard/src/components/: providers.tsx
dashboard/src/hooks/: use-agents.ts  use-mobile.ts  use-query-state.ts  use-stats.ts
dashboard/src/lib/: animations.ts  api.ts  content.tsx  emoji.ts  mrkdwn.tsx  utils.ts
dashboard/src/plugins/: index.ts
dashboard/src/types/: api.ts  slack.ts
docs/: PLUGINS.md
docs/workflows/: auto-fix-scheduler.md  daily-report.md  gitlab-mr-review.md  slack-feedback-handler.md  slack-mention-handler.md  slack-message-handler.md  slack-reaction-handler.md  user-context-handler.md
n8n-workflows/: auto-fix-scheduler.json  daily-report.json  gitlab-mr-review.json  slack-feedback-handler.json  slack-mention-handler.json  slack-message-handler.json  slack-reaction-handler.json  user-context-handler.json
scripts/: api-server.sh  dashboard.sh  n8n-workflows.sh  sync-agents.sh
(+80 files in other folders)
