[package]
name = "claudio-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claudio - Local Claude Code orchestration hub with Slack and n8n workflow integration"

[dependencies]
# Web framework
axum = { version = "0.8.7", features = ["tokio", "ws"] }
futures = "0.3"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "net", "signal", "time"] }
tower-http = { version = "0.6.7", features = ["cors"] }

# Slack Socket Mode
slack-morphism = { version = "2.17", features = ["hyper"] }

# HTTP client
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }

# TLS
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw = "2.5"

# Error handling
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1.12"
once_cell = "1.21"
dotenvy = "0.15.7"

# Rate limiting
governor = "0.10.2"
dashmap = "6.1.0"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"

# Temp files
tempfile = "3.23.0"
